# flecs-breakout

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  bitfont.cpp  components.h  main.cpp  sdl_render.cpp  sdl_render.h
